--- a/public/index.html
+++ b/public/index.html
@@ -2,31 +2,48 @@
 <html lang="pt-BR">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <title>Notas</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+  <title>Notas</title>
 </head>
 
-<body class="container bg-body w-100 h-100">
-    <header class="d-block m-auto text-center pt-3">
-        <h1>Notas</h1>
-    </header>
-    <div class="mt-5 mx-auto w-50 d-flex justify-content-around" id="lista_notas">
-        <div class="card text-center bg-info" style="width: 18rem;">
-            <div class="card-body">
-              <h5 class="card-title" id="titulo_nota">Card title</h5>
-              <p class="card-text" id="descricao_nota">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            </div>
-          </div>
-          <div class="card text-center bg-danger-subtle" style="width: 18rem;">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            </div>
-          </div>
-    </div>
+<body class="container bg-info w-100 h-100">
+  <header class="d-block m-auto text-center pt-3">
+    <h1 class="text-white">Notas</h1>
+  </header>
+  <div class="m-3 mx-auto w-50 d-flex rounded bg-body-tertiary p-3">
+    <form class="w-100" id="criarNota">
+      <div class="mb-3 w-100">
+        <label for="titulo" class="form-label">Título da nota</label>
+        <input type="text" class="form-control" id="titulo" name="titulo">
+      </div>
+      <div class="mb-3 w-100">
+        <label for="descricao" class="form-label">Descrição</label>
+        <input type="text" class="form-control" id="descricao" name="descricao">
+      </div>
+      <div>
+        <label for="corDeFundo">Cor de fundo da nota</label>
+        <select class="form-select mb-3" name="corDeFundo" id="corDeFundo">
+          <option value="null" selected>Selecionar cor</option>
+          <option value="#EE6055">Vermelho</option>
+          <option value="#60D394">Verde</option>
+          <option value="#AAF683">Verde claro</option>
+          <option value="#FFD97D">Amarelo claro</option>
+          <option value="#FF9B85">Rosa claro</option>
+        </select>
+      </div>
+      <button type="submit" class="btn btn-primary">Criar</button>
+      <div class="w-100 p-3 rounded mt-3" id="mensagem" style="display: none;"></div>
+    </form>
+  </div>
+  <div class="mt-3 mx-auto w-50 overflow-scroll overflow-x-hidden p-3 rounded"
+    style="height: 250px; background: url('./img//papel.jpg'); background-size: cover;" id="lista_notas">
+
+  </div>
+  <script type="module" src="./scripts/index.js"></script>
+  <script src="https://kit.fontawesome.com/df87a55f2a.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
